# datachecker

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  output_report.html  output_report_function.html  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build-and-test.yml
_static/: mkdocs_custom.css
api_reference/checks/: index.html
api_reference/main/: index.html
api_reference/schema_loader/: index.html
api_reference/validator_exporter/: index.html
changelog/: index.html
contributor_guide/CODE_OF_CONDUCT/: index.html
contributor_guide/CONTRIBUTING/: index.html
contributor_guide/using_pytest/: index.html
datachecker/: __init__.py  main.py
datachecker/checks_loaders_and_exporters/: checks.py  schema_loader.py  validator_exporter.py  validator_template.html
datachecker/data_checkers/: general_validator.py  pandas_validator.py  polars_validator.py  pyspark_validator.py
docs/: changelog.md  index.md
docs/api_reference/: checks.md  main.md  schema_loader.md  validator_exporter.md
docs/assets/: mkdocs_custom.css
docs/contributor_guide/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  using_pytest.md
docs/user_guide/: demo.py  demo_2.py  examples.md  polars_demo.py
onsdatachecker/: __init__.py  main.py
onsdatachecker/checks_loaders_and_exporters/: checks.py  schema_loader.py  validator_exporter.py  validator_template.html
onsdatachecker/data_checkers/: general_validator.py  pandas_validator.py  polars_validator.py  pyspark_validator.py
overrides/: main.html
search/: search_index.json
tests/: repo_tests_README.md  test__check_colnames.py  test__check_column_contents.py  test__check_completeness.py  test__check_duplicates.py  test_checks.py  test_exporter.py  test_failed_cases.py  test_main.py  test_pyspark.py  test_pyspark_validator.py  test_schema_loader.py
tests/data/: test.json  test.toml  test.yaml
user_guide/: demo.py
user_guide/examples/: index.html
